pl2024-projeto-gr16/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGINCOMMENT
    INVERT
    LPAREN
    NEWLINE
    RPAREN
    WHITESPACE

Grammar

Rule 0     S' -> S
Rule 1     S -> Options
Rule 2     Options -> Expression
Rule 3     Options -> Function
Rule 4     Function -> Options COLON ID Options SEMICOLON
Rule 5     Expression -> Options Token
Rule 6     Expression -> <empty>
Rule 7     Token -> Operation
Rule 8     Token -> Quickie
Rule 9     Token -> Misk
Rule 10    Token -> Manuver
Rule 11    Token -> Logic
Rule 12    Token -> Loop
Rule 13    Token -> Condition
Rule 14    Token -> Variables
Rule 15    Token -> Elem
Rule 16    Token -> Io
Rule 17    Operation -> PLUS
Rule 18    Operation -> TIMES
Rule 19    Operation -> DIVIDE
Rule 20    Operation -> MINUS
Rule 21    Operation -> EXP
Rule 22    Operation -> MOD
Rule 23    Operation -> DIVMOD
Rule 24    Loop -> DO Options LOOP
Rule 25    Loop -> BEGIN Options UNTIL
Rule 26    Loop -> BEGIN Options WHILE Options REPEAT
Rule 27    Loop -> I
Rule 28    Loop -> DO Options PLUSLOOP
Rule 29    Condition -> IF Options ELSE Options THEN
Rule 30    Condition -> IF Options THEN
Rule 31    Quickie -> QUICKADDONE
Rule 32    Quickie -> QUICKADDTWO
Rule 33    Quickie -> QUICKSUBONE
Rule 34    Quickie -> QUICKSUBTWO
Rule 35    Quickie -> QUICKMULTWO
Rule 36    Quickie -> QUICKDIVTWO
Rule 37    Logic -> EQUAL
Rule 38    Logic -> NOTEQUAL
Rule 39    Logic -> GREATER
Rule 40    Logic -> LESS
Rule 41    Logic -> ZEROEQUALS
Rule 42    Logic -> ZEROLESS
Rule 43    Logic -> ZEROGREATER
Rule 44    Logic -> FALSE
Rule 45    Logic -> TRUE
Rule 46    Misk -> ABS
Rule 47    Misk -> NEGATE
Rule 48    Misk -> MIN
Rule 49    Misk -> MAX
Rule 50    Manuver -> DUP
Rule 51    Manuver -> 2DUP
Rule 52    Manuver -> SWAP
Rule 53    Manuver -> ROT
Rule 54    Manuver -> OVER
Rule 55    Manuver -> DROP
Rule 56    Variables -> VARIABLE ID
Rule 57    Variables -> ID EXCLAMATION
Rule 58    Variables -> ID ATSIGN
Rule 59    Variables -> ID QUESTIONMARK
Rule 60    Variables -> ID
Rule 61    Io -> DOT
Rule 62    Io -> KEY
Rule 63    Io -> CHAR
Rule 64    Io -> CR
Rule 65    Io -> SPACE
Rule 66    Io -> SPACES
Rule 67    Io -> EMIT
Rule 68    Elem -> NUMBER
Rule 69    Elem -> STRING

Terminals, with rules where they appear

2DUP                 : 51
ABS                  : 46
ATSIGN               : 58
BEGIN                : 25 26
BEGINCOMMENT         : 
CHAR                 : 63
COLON                : 4
CR                   : 64
DIVIDE               : 19
DIVMOD               : 23
DO                   : 24 28
DOT                  : 61
DROP                 : 55
DUP                  : 50
ELSE                 : 29
EMIT                 : 67
EQUAL                : 37
EXCLAMATION          : 57
EXP                  : 21
FALSE                : 44
GREATER              : 39
I                    : 27
ID                   : 4 56 57 58 59 60
IF                   : 29 30
INVERT               : 
KEY                  : 62
LESS                 : 40
LOOP                 : 24
LPAREN               : 
MAX                  : 49
MIN                  : 48
MINUS                : 20
MOD                  : 22
NEGATE               : 47
NEWLINE              : 
NOTEQUAL             : 38
NUMBER               : 68
OVER                 : 54
PLUS                 : 17
PLUSLOOP             : 28
QUESTIONMARK         : 59
QUICKADDONE          : 31
QUICKADDTWO          : 32
QUICKDIVTWO          : 36
QUICKMULTWO          : 35
QUICKSUBONE          : 33
QUICKSUBTWO          : 34
REPEAT               : 26
ROT                  : 53
RPAREN               : 
SEMICOLON            : 4
SPACE                : 65
SPACES               : 66
STRING               : 69
SWAP                 : 52
THEN                 : 29 30
TIMES                : 18
TRUE                 : 45
UNTIL                : 25
VARIABLE             : 56
WHILE                : 26
WHITESPACE           : 
ZEROEQUALS           : 41
ZEROGREATER          : 43
ZEROLESS             : 42
error                : 

Nonterminals, with rules where they appear

Condition            : 13
Elem                 : 15
Expression           : 2
Function             : 3
Io                   : 16
Logic                : 11
Loop                 : 12
Manuver              : 10
Misk                 : 9
Operation            : 7
Options              : 1 4 4 5 24 25 26 26 28 29 29 30
Quickie              : 8
S                    : 0
Token                : 5
Variables            : 14

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . Options
    (2) Options -> . Expression
    (3) Options -> . Function
    (5) Expression -> . Options Token
    (6) Expression -> .
    (4) Function -> . Options COLON ID Options SEMICOLON

    COLON           reduce using rule 6 (Expression -> .)
    PLUS            reduce using rule 6 (Expression -> .)
    TIMES           reduce using rule 6 (Expression -> .)
    DIVIDE          reduce using rule 6 (Expression -> .)
    MINUS           reduce using rule 6 (Expression -> .)
    EXP             reduce using rule 6 (Expression -> .)
    MOD             reduce using rule 6 (Expression -> .)
    DIVMOD          reduce using rule 6 (Expression -> .)
    QUICKADDONE     reduce using rule 6 (Expression -> .)
    QUICKADDTWO     reduce using rule 6 (Expression -> .)
    QUICKSUBONE     reduce using rule 6 (Expression -> .)
    QUICKSUBTWO     reduce using rule 6 (Expression -> .)
    QUICKMULTWO     reduce using rule 6 (Expression -> .)
    QUICKDIVTWO     reduce using rule 6 (Expression -> .)
    ABS             reduce using rule 6 (Expression -> .)
    NEGATE          reduce using rule 6 (Expression -> .)
    MIN             reduce using rule 6 (Expression -> .)
    MAX             reduce using rule 6 (Expression -> .)
    DUP             reduce using rule 6 (Expression -> .)
    2DUP            reduce using rule 6 (Expression -> .)
    SWAP            reduce using rule 6 (Expression -> .)
    ROT             reduce using rule 6 (Expression -> .)
    OVER            reduce using rule 6 (Expression -> .)
    DROP            reduce using rule 6 (Expression -> .)
    EQUAL           reduce using rule 6 (Expression -> .)
    NOTEQUAL        reduce using rule 6 (Expression -> .)
    GREATER         reduce using rule 6 (Expression -> .)
    LESS            reduce using rule 6 (Expression -> .)
    ZEROEQUALS      reduce using rule 6 (Expression -> .)
    ZEROLESS        reduce using rule 6 (Expression -> .)
    ZEROGREATER     reduce using rule 6 (Expression -> .)
    FALSE           reduce using rule 6 (Expression -> .)
    TRUE            reduce using rule 6 (Expression -> .)
    DO              reduce using rule 6 (Expression -> .)
    BEGIN           reduce using rule 6 (Expression -> .)
    I               reduce using rule 6 (Expression -> .)
    IF              reduce using rule 6 (Expression -> .)
    VARIABLE        reduce using rule 6 (Expression -> .)
    ID              reduce using rule 6 (Expression -> .)
    NUMBER          reduce using rule 6 (Expression -> .)
    STRING          reduce using rule 6 (Expression -> .)
    DOT             reduce using rule 6 (Expression -> .)
    KEY             reduce using rule 6 (Expression -> .)
    CHAR            reduce using rule 6 (Expression -> .)
    CR              reduce using rule 6 (Expression -> .)
    SPACE           reduce using rule 6 (Expression -> .)
    SPACES          reduce using rule 6 (Expression -> .)
    EMIT            reduce using rule 6 (Expression -> .)
    $end            reduce using rule 6 (Expression -> .)

    S                              shift and go to state 1
    Options                        shift and go to state 2
    Expression                     shift and go to state 3
    Function                       shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> Options .
    (5) Expression -> Options . Token
    (4) Function -> Options . COLON ID Options SEMICOLON
    (7) Token -> . Operation
    (8) Token -> . Quickie
    (9) Token -> . Misk
    (10) Token -> . Manuver
    (11) Token -> . Logic
    (12) Token -> . Loop
    (13) Token -> . Condition
    (14) Token -> . Variables
    (15) Token -> . Elem
    (16) Token -> . Io
    (17) Operation -> . PLUS
    (18) Operation -> . TIMES
    (19) Operation -> . DIVIDE
    (20) Operation -> . MINUS
    (21) Operation -> . EXP
    (22) Operation -> . MOD
    (23) Operation -> . DIVMOD
    (31) Quickie -> . QUICKADDONE
    (32) Quickie -> . QUICKADDTWO
    (33) Quickie -> . QUICKSUBONE
    (34) Quickie -> . QUICKSUBTWO
    (35) Quickie -> . QUICKMULTWO
    (36) Quickie -> . QUICKDIVTWO
    (46) Misk -> . ABS
    (47) Misk -> . NEGATE
    (48) Misk -> . MIN
    (49) Misk -> . MAX
    (50) Manuver -> . DUP
    (51) Manuver -> . 2DUP
    (52) Manuver -> . SWAP
    (53) Manuver -> . ROT
    (54) Manuver -> . OVER
    (55) Manuver -> . DROP
    (37) Logic -> . EQUAL
    (38) Logic -> . NOTEQUAL
    (39) Logic -> . GREATER
    (40) Logic -> . LESS
    (41) Logic -> . ZEROEQUALS
    (42) Logic -> . ZEROLESS
    (43) Logic -> . ZEROGREATER
    (44) Logic -> . FALSE
    (45) Logic -> . TRUE
    (24) Loop -> . DO Options LOOP
    (25) Loop -> . BEGIN Options UNTIL
    (26) Loop -> . BEGIN Options WHILE Options REPEAT
    (27) Loop -> . I
    (28) Loop -> . DO Options PLUSLOOP
    (29) Condition -> . IF Options ELSE Options THEN
    (30) Condition -> . IF Options THEN
    (56) Variables -> . VARIABLE ID
    (57) Variables -> . ID EXCLAMATION
    (58) Variables -> . ID ATSIGN
    (59) Variables -> . ID QUESTIONMARK
    (60) Variables -> . ID
    (68) Elem -> . NUMBER
    (69) Elem -> . STRING
    (61) Io -> . DOT
    (62) Io -> . KEY
    (63) Io -> . CHAR
    (64) Io -> . CR
    (65) Io -> . SPACE
    (66) Io -> . SPACES
    (67) Io -> . EMIT

    $end            reduce using rule 1 (S -> Options .)
    COLON           shift and go to state 6
    PLUS            shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    MINUS           shift and go to state 21
    EXP             shift and go to state 22
    MOD             shift and go to state 23
    DIVMOD          shift and go to state 24
    QUICKADDONE     shift and go to state 25
    QUICKADDTWO     shift and go to state 26
    QUICKSUBONE     shift and go to state 27
    QUICKSUBTWO     shift and go to state 28
    QUICKMULTWO     shift and go to state 29
    QUICKDIVTWO     shift and go to state 30
    ABS             shift and go to state 31
    NEGATE          shift and go to state 32
    MIN             shift and go to state 33
    MAX             shift and go to state 34
    DUP             shift and go to state 35
    2DUP            shift and go to state 36
    SWAP            shift and go to state 37
    ROT             shift and go to state 38
    OVER            shift and go to state 39
    DROP            shift and go to state 40
    EQUAL           shift and go to state 41
    NOTEQUAL        shift and go to state 42
    GREATER         shift and go to state 43
    LESS            shift and go to state 44
    ZEROEQUALS      shift and go to state 45
    ZEROLESS        shift and go to state 46
    ZEROGREATER     shift and go to state 47
    FALSE           shift and go to state 48
    TRUE            shift and go to state 49
    DO              shift and go to state 50
    BEGIN           shift and go to state 51
    I               shift and go to state 52
    IF              shift and go to state 53
    VARIABLE        shift and go to state 54
    ID              shift and go to state 7
    NUMBER          shift and go to state 55
    STRING          shift and go to state 56
    DOT             shift and go to state 57
    KEY             shift and go to state 58
    CHAR            shift and go to state 59
    CR              shift and go to state 60
    SPACE           shift and go to state 61
    SPACES          shift and go to state 62
    EMIT            shift and go to state 63

    Token                          shift and go to state 5
    Operation                      shift and go to state 8
    Quickie                        shift and go to state 9
    Misk                           shift and go to state 10
    Manuver                        shift and go to state 11
    Logic                          shift and go to state 12
    Loop                           shift and go to state 13
    Condition                      shift and go to state 14
    Variables                      shift and go to state 15
    Elem                           shift and go to state 16
    Io                             shift and go to state 17

state 3

    (2) Options -> Expression .

    COLON           reduce using rule 2 (Options -> Expression .)
    PLUS            reduce using rule 2 (Options -> Expression .)
    TIMES           reduce using rule 2 (Options -> Expression .)
    DIVIDE          reduce using rule 2 (Options -> Expression .)
    MINUS           reduce using rule 2 (Options -> Expression .)
    EXP             reduce using rule 2 (Options -> Expression .)
    MOD             reduce using rule 2 (Options -> Expression .)
    DIVMOD          reduce using rule 2 (Options -> Expression .)
    QUICKADDONE     reduce using rule 2 (Options -> Expression .)
    QUICKADDTWO     reduce using rule 2 (Options -> Expression .)
    QUICKSUBONE     reduce using rule 2 (Options -> Expression .)
    QUICKSUBTWO     reduce using rule 2 (Options -> Expression .)
    QUICKMULTWO     reduce using rule 2 (Options -> Expression .)
    QUICKDIVTWO     reduce using rule 2 (Options -> Expression .)
    ABS             reduce using rule 2 (Options -> Expression .)
    NEGATE          reduce using rule 2 (Options -> Expression .)
    MIN             reduce using rule 2 (Options -> Expression .)
    MAX             reduce using rule 2 (Options -> Expression .)
    DUP             reduce using rule 2 (Options -> Expression .)
    2DUP            reduce using rule 2 (Options -> Expression .)
    SWAP            reduce using rule 2 (Options -> Expression .)
    ROT             reduce using rule 2 (Options -> Expression .)
    OVER            reduce using rule 2 (Options -> Expression .)
    DROP            reduce using rule 2 (Options -> Expression .)
    EQUAL           reduce using rule 2 (Options -> Expression .)
    NOTEQUAL        reduce using rule 2 (Options -> Expression .)
    GREATER         reduce using rule 2 (Options -> Expression .)
    LESS            reduce using rule 2 (Options -> Expression .)
    ZEROEQUALS      reduce using rule 2 (Options -> Expression .)
    ZEROLESS        reduce using rule 2 (Options -> Expression .)
    ZEROGREATER     reduce using rule 2 (Options -> Expression .)
    FALSE           reduce using rule 2 (Options -> Expression .)
    TRUE            reduce using rule 2 (Options -> Expression .)
    DO              reduce using rule 2 (Options -> Expression .)
    BEGIN           reduce using rule 2 (Options -> Expression .)
    I               reduce using rule 2 (Options -> Expression .)
    IF              reduce using rule 2 (Options -> Expression .)
    VARIABLE        reduce using rule 2 (Options -> Expression .)
    ID              reduce using rule 2 (Options -> Expression .)
    NUMBER          reduce using rule 2 (Options -> Expression .)
    STRING          reduce using rule 2 (Options -> Expression .)
    DOT             reduce using rule 2 (Options -> Expression .)
    KEY             reduce using rule 2 (Options -> Expression .)
    CHAR            reduce using rule 2 (Options -> Expression .)
    CR              reduce using rule 2 (Options -> Expression .)
    SPACE           reduce using rule 2 (Options -> Expression .)
    SPACES          reduce using rule 2 (Options -> Expression .)
    EMIT            reduce using rule 2 (Options -> Expression .)
    $end            reduce using rule 2 (Options -> Expression .)
    LOOP            reduce using rule 2 (Options -> Expression .)
    PLUSLOOP        reduce using rule 2 (Options -> Expression .)
    UNTIL           reduce using rule 2 (Options -> Expression .)
    WHILE           reduce using rule 2 (Options -> Expression .)
    ELSE            reduce using rule 2 (Options -> Expression .)
    THEN            reduce using rule 2 (Options -> Expression .)
    SEMICOLON       reduce using rule 2 (Options -> Expression .)
    REPEAT          reduce using rule 2 (Options -> Expression .)


state 4

    (3) Options -> Function .

    COLON           reduce using rule 3 (Options -> Function .)
    PLUS            reduce using rule 3 (Options -> Function .)
    TIMES           reduce using rule 3 (Options -> Function .)
    DIVIDE          reduce using rule 3 (Options -> Function .)
    MINUS           reduce using rule 3 (Options -> Function .)
    EXP             reduce using rule 3 (Options -> Function .)
    MOD             reduce using rule 3 (Options -> Function .)
    DIVMOD          reduce using rule 3 (Options -> Function .)
    QUICKADDONE     reduce using rule 3 (Options -> Function .)
    QUICKADDTWO     reduce using rule 3 (Options -> Function .)
    QUICKSUBONE     reduce using rule 3 (Options -> Function .)
    QUICKSUBTWO     reduce using rule 3 (Options -> Function .)
    QUICKMULTWO     reduce using rule 3 (Options -> Function .)
    QUICKDIVTWO     reduce using rule 3 (Options -> Function .)
    ABS             reduce using rule 3 (Options -> Function .)
    NEGATE          reduce using rule 3 (Options -> Function .)
    MIN             reduce using rule 3 (Options -> Function .)
    MAX             reduce using rule 3 (Options -> Function .)
    DUP             reduce using rule 3 (Options -> Function .)
    2DUP            reduce using rule 3 (Options -> Function .)
    SWAP            reduce using rule 3 (Options -> Function .)
    ROT             reduce using rule 3 (Options -> Function .)
    OVER            reduce using rule 3 (Options -> Function .)
    DROP            reduce using rule 3 (Options -> Function .)
    EQUAL           reduce using rule 3 (Options -> Function .)
    NOTEQUAL        reduce using rule 3 (Options -> Function .)
    GREATER         reduce using rule 3 (Options -> Function .)
    LESS            reduce using rule 3 (Options -> Function .)
    ZEROEQUALS      reduce using rule 3 (Options -> Function .)
    ZEROLESS        reduce using rule 3 (Options -> Function .)
    ZEROGREATER     reduce using rule 3 (Options -> Function .)
    FALSE           reduce using rule 3 (Options -> Function .)
    TRUE            reduce using rule 3 (Options -> Function .)
    DO              reduce using rule 3 (Options -> Function .)
    BEGIN           reduce using rule 3 (Options -> Function .)
    I               reduce using rule 3 (Options -> Function .)
    IF              reduce using rule 3 (Options -> Function .)
    VARIABLE        reduce using rule 3 (Options -> Function .)
    ID              reduce using rule 3 (Options -> Function .)
    NUMBER          reduce using rule 3 (Options -> Function .)
    STRING          reduce using rule 3 (Options -> Function .)
    DOT             reduce using rule 3 (Options -> Function .)
    KEY             reduce using rule 3 (Options -> Function .)
    CHAR            reduce using rule 3 (Options -> Function .)
    CR              reduce using rule 3 (Options -> Function .)
    SPACE           reduce using rule 3 (Options -> Function .)
    SPACES          reduce using rule 3 (Options -> Function .)
    EMIT            reduce using rule 3 (Options -> Function .)
    $end            reduce using rule 3 (Options -> Function .)
    LOOP            reduce using rule 3 (Options -> Function .)
    PLUSLOOP        reduce using rule 3 (Options -> Function .)
    UNTIL           reduce using rule 3 (Options -> Function .)
    WHILE           reduce using rule 3 (Options -> Function .)
    ELSE            reduce using rule 3 (Options -> Function .)
    THEN            reduce using rule 3 (Options -> Function .)
    SEMICOLON       reduce using rule 3 (Options -> Function .)
    REPEAT          reduce using rule 3 (Options -> Function .)


state 5

    (5) Expression -> Options Token .

    COLON           reduce using rule 5 (Expression -> Options Token .)
    PLUS            reduce using rule 5 (Expression -> Options Token .)
    TIMES           reduce using rule 5 (Expression -> Options Token .)
    DIVIDE          reduce using rule 5 (Expression -> Options Token .)
    MINUS           reduce using rule 5 (Expression -> Options Token .)
    EXP             reduce using rule 5 (Expression -> Options Token .)
    MOD             reduce using rule 5 (Expression -> Options Token .)
    DIVMOD          reduce using rule 5 (Expression -> Options Token .)
    QUICKADDONE     reduce using rule 5 (Expression -> Options Token .)
    QUICKADDTWO     reduce using rule 5 (Expression -> Options Token .)
    QUICKSUBONE     reduce using rule 5 (Expression -> Options Token .)
    QUICKSUBTWO     reduce using rule 5 (Expression -> Options Token .)
    QUICKMULTWO     reduce using rule 5 (Expression -> Options Token .)
    QUICKDIVTWO     reduce using rule 5 (Expression -> Options Token .)
    ABS             reduce using rule 5 (Expression -> Options Token .)
    NEGATE          reduce using rule 5 (Expression -> Options Token .)
    MIN             reduce using rule 5 (Expression -> Options Token .)
    MAX             reduce using rule 5 (Expression -> Options Token .)
    DUP             reduce using rule 5 (Expression -> Options Token .)
    2DUP            reduce using rule 5 (Expression -> Options Token .)
    SWAP            reduce using rule 5 (Expression -> Options Token .)
    ROT             reduce using rule 5 (Expression -> Options Token .)
    OVER            reduce using rule 5 (Expression -> Options Token .)
    DROP            reduce using rule 5 (Expression -> Options Token .)
    EQUAL           reduce using rule 5 (Expression -> Options Token .)
    NOTEQUAL        reduce using rule 5 (Expression -> Options Token .)
    GREATER         reduce using rule 5 (Expression -> Options Token .)
    LESS            reduce using rule 5 (Expression -> Options Token .)
    ZEROEQUALS      reduce using rule 5 (Expression -> Options Token .)
    ZEROLESS        reduce using rule 5 (Expression -> Options Token .)
    ZEROGREATER     reduce using rule 5 (Expression -> Options Token .)
    FALSE           reduce using rule 5 (Expression -> Options Token .)
    TRUE            reduce using rule 5 (Expression -> Options Token .)
    DO              reduce using rule 5 (Expression -> Options Token .)
    BEGIN           reduce using rule 5 (Expression -> Options Token .)
    I               reduce using rule 5 (Expression -> Options Token .)
    IF              reduce using rule 5 (Expression -> Options Token .)
    VARIABLE        reduce using rule 5 (Expression -> Options Token .)
    ID              reduce using rule 5 (Expression -> Options Token .)
    NUMBER          reduce using rule 5 (Expression -> Options Token .)
    STRING          reduce using rule 5 (Expression -> Options Token .)
    DOT             reduce using rule 5 (Expression -> Options Token .)
    KEY             reduce using rule 5 (Expression -> Options Token .)
    CHAR            reduce using rule 5 (Expression -> Options Token .)
    CR              reduce using rule 5 (Expression -> Options Token .)
    SPACE           reduce using rule 5 (Expression -> Options Token .)
    SPACES          reduce using rule 5 (Expression -> Options Token .)
    EMIT            reduce using rule 5 (Expression -> Options Token .)
    $end            reduce using rule 5 (Expression -> Options Token .)
    LOOP            reduce using rule 5 (Expression -> Options Token .)
    PLUSLOOP        reduce using rule 5 (Expression -> Options Token .)
    UNTIL           reduce using rule 5 (Expression -> Options Token .)
    WHILE           reduce using rule 5 (Expression -> Options Token .)
    ELSE            reduce using rule 5 (Expression -> Options Token .)
    THEN            reduce using rule 5 (Expression -> Options Token .)
    SEMICOLON       reduce using rule 5 (Expression -> Options Token .)
    REPEAT          reduce using rule 5 (Expression -> Options Token .)


state 6

    (4) Function -> Options COLON . ID Options SEMICOLON

    ID              shift and go to state 64


state 7

    (57) Variables -> ID . EXCLAMATION
    (58) Variables -> ID . ATSIGN
    (59) Variables -> ID . QUESTIONMARK
    (60) Variables -> ID .

    EXCLAMATION     shift and go to state 65
    ATSIGN          shift and go to state 66
    QUESTIONMARK    shift and go to state 67
    COLON           reduce using rule 60 (Variables -> ID .)
    PLUS            reduce using rule 60 (Variables -> ID .)
    TIMES           reduce using rule 60 (Variables -> ID .)
    DIVIDE          reduce using rule 60 (Variables -> ID .)
    MINUS           reduce using rule 60 (Variables -> ID .)
    EXP             reduce using rule 60 (Variables -> ID .)
    MOD             reduce using rule 60 (Variables -> ID .)
    DIVMOD          reduce using rule 60 (Variables -> ID .)
    QUICKADDONE     reduce using rule 60 (Variables -> ID .)
    QUICKADDTWO     reduce using rule 60 (Variables -> ID .)
    QUICKSUBONE     reduce using rule 60 (Variables -> ID .)
    QUICKSUBTWO     reduce using rule 60 (Variables -> ID .)
    QUICKMULTWO     reduce using rule 60 (Variables -> ID .)
    QUICKDIVTWO     reduce using rule 60 (Variables -> ID .)
    ABS             reduce using rule 60 (Variables -> ID .)
    NEGATE          reduce using rule 60 (Variables -> ID .)
    MIN             reduce using rule 60 (Variables -> ID .)
    MAX             reduce using rule 60 (Variables -> ID .)
    DUP             reduce using rule 60 (Variables -> ID .)
    2DUP            reduce using rule 60 (Variables -> ID .)
    SWAP            reduce using rule 60 (Variables -> ID .)
    ROT             reduce using rule 60 (Variables -> ID .)
    OVER            reduce using rule 60 (Variables -> ID .)
    DROP            reduce using rule 60 (Variables -> ID .)
    EQUAL           reduce using rule 60 (Variables -> ID .)
    NOTEQUAL        reduce using rule 60 (Variables -> ID .)
    GREATER         reduce using rule 60 (Variables -> ID .)
    LESS            reduce using rule 60 (Variables -> ID .)
    ZEROEQUALS      reduce using rule 60 (Variables -> ID .)
    ZEROLESS        reduce using rule 60 (Variables -> ID .)
    ZEROGREATER     reduce using rule 60 (Variables -> ID .)
    FALSE           reduce using rule 60 (Variables -> ID .)
    TRUE            reduce using rule 60 (Variables -> ID .)
    DO              reduce using rule 60 (Variables -> ID .)
    BEGIN           reduce using rule 60 (Variables -> ID .)
    I               reduce using rule 60 (Variables -> ID .)
    IF              reduce using rule 60 (Variables -> ID .)
    VARIABLE        reduce using rule 60 (Variables -> ID .)
    ID              reduce using rule 60 (Variables -> ID .)
    NUMBER          reduce using rule 60 (Variables -> ID .)
    STRING          reduce using rule 60 (Variables -> ID .)
    DOT             reduce using rule 60 (Variables -> ID .)
    KEY             reduce using rule 60 (Variables -> ID .)
    CHAR            reduce using rule 60 (Variables -> ID .)
    CR              reduce using rule 60 (Variables -> ID .)
    SPACE           reduce using rule 60 (Variables -> ID .)
    SPACES          reduce using rule 60 (Variables -> ID .)
    EMIT            reduce using rule 60 (Variables -> ID .)
    $end            reduce using rule 60 (Variables -> ID .)
    LOOP            reduce using rule 60 (Variables -> ID .)
    PLUSLOOP        reduce using rule 60 (Variables -> ID .)
    UNTIL           reduce using rule 60 (Variables -> ID .)
    WHILE           reduce using rule 60 (Variables -> ID .)
    ELSE            reduce using rule 60 (Variables -> ID .)
    THEN            reduce using rule 60 (Variables -> ID .)
    SEMICOLON       reduce using rule 60 (Variables -> ID .)
    REPEAT          reduce using rule 60 (Variables -> ID .)


state 8

    (7) Token -> Operation .

    COLON           reduce using rule 7 (Token -> Operation .)
    PLUS            reduce using rule 7 (Token -> Operation .)
    TIMES           reduce using rule 7 (Token -> Operation .)
    DIVIDE          reduce using rule 7 (Token -> Operation .)
    MINUS           reduce using rule 7 (Token -> Operation .)
    EXP             reduce using rule 7 (Token -> Operation .)
    MOD             reduce using rule 7 (Token -> Operation .)
    DIVMOD          reduce using rule 7 (Token -> Operation .)
    QUICKADDONE     reduce using rule 7 (Token -> Operation .)
    QUICKADDTWO     reduce using rule 7 (Token -> Operation .)
    QUICKSUBONE     reduce using rule 7 (Token -> Operation .)
    QUICKSUBTWO     reduce using rule 7 (Token -> Operation .)
    QUICKMULTWO     reduce using rule 7 (Token -> Operation .)
    QUICKDIVTWO     reduce using rule 7 (Token -> Operation .)
    ABS             reduce using rule 7 (Token -> Operation .)
    NEGATE          reduce using rule 7 (Token -> Operation .)
    MIN             reduce using rule 7 (Token -> Operation .)
    MAX             reduce using rule 7 (Token -> Operation .)
    DUP             reduce using rule 7 (Token -> Operation .)
    2DUP            reduce using rule 7 (Token -> Operation .)
    SWAP            reduce using rule 7 (Token -> Operation .)
    ROT             reduce using rule 7 (Token -> Operation .)
    OVER            reduce using rule 7 (Token -> Operation .)
    DROP            reduce using rule 7 (Token -> Operation .)
    EQUAL           reduce using rule 7 (Token -> Operation .)
    NOTEQUAL        reduce using rule 7 (Token -> Operation .)
    GREATER         reduce using rule 7 (Token -> Operation .)
    LESS            reduce using rule 7 (Token -> Operation .)
    ZEROEQUALS      reduce using rule 7 (Token -> Operation .)
    ZEROLESS        reduce using rule 7 (Token -> Operation .)
    ZEROGREATER     reduce using rule 7 (Token -> Operation .)
    FALSE           reduce using rule 7 (Token -> Operation .)
    TRUE            reduce using rule 7 (Token -> Operation .)
    DO              reduce using rule 7 (Token -> Operation .)
    BEGIN           reduce using rule 7 (Token -> Operation .)
    I               reduce using rule 7 (Token -> Operation .)
    IF              reduce using rule 7 (Token -> Operation .)
    VARIABLE        reduce using rule 7 (Token -> Operation .)
    ID              reduce using rule 7 (Token -> Operation .)
    NUMBER          reduce using rule 7 (Token -> Operation .)
    STRING          reduce using rule 7 (Token -> Operation .)
    DOT             reduce using rule 7 (Token -> Operation .)
    KEY             reduce using rule 7 (Token -> Operation .)
    CHAR            reduce using rule 7 (Token -> Operation .)
    CR              reduce using rule 7 (Token -> Operation .)
    SPACE           reduce using rule 7 (Token -> Operation .)
    SPACES          reduce using rule 7 (Token -> Operation .)
    EMIT            reduce using rule 7 (Token -> Operation .)
    $end            reduce using rule 7 (Token -> Operation .)
    LOOP            reduce using rule 7 (Token -> Operation .)
    PLUSLOOP        reduce using rule 7 (Token -> Operation .)
    UNTIL           reduce using rule 7 (Token -> Operation .)
    WHILE           reduce using rule 7 (Token -> Operation .)
    ELSE            reduce using rule 7 (Token -> Operation .)
    THEN            reduce using rule 7 (Token -> Operation .)
    SEMICOLON       reduce using rule 7 (Token -> Operation .)
    REPEAT          reduce using rule 7 (Token -> Operation .)


state 9

    (8) Token -> Quickie .
